--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "tax-tally-web",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "18.18.0"
+  },
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,20 +14,19 @@
   "dependencies": {
     "@stripe/stripe-js": "^7.0.0",
     "axios": "^1.8.4",
-    "firebase-admin": "^13.2.0",
-    "next": "15.2.5",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "stripe": "^18.0.0",
-    "uuid": "^11.1.0"
+    "firebase": "^10.7.0",
+    "firebase-admin": "^11.11.0",
+    "next": "14.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "stripe": "^14.10.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.1.3",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.5",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.3"
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.0.4",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0"
   }
 }
