--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-social-icons": "^6.24.0",
     "stripe": "^14.10.0",
     "uuid": "^9.0.1"
   },
